--- a/style.css
+++ b/style.css
@@ -1,72 +1,56 @@
 body {
+    background: linear-gradient(135deg, #f0f4ff, #d9e4ff);
     margin: 0;
-    height: 100vh;
-    
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    height: 100vh;
+    flex-direction: column;
 }
 
-.container {
-    width: 350px;
-    padding: 30px 40px;
-    background: #ddd7d7;
+form {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
+h1 {
     text-align: center;
-    animation: fadeIn 0.5s ease-in-out;
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(-20px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-.container h1 {
-    margin-bottom: 15px;
-    color:black;
-}
-
-.container label {
-    margin: 10px 0 5px;
-    font-size: 15px;
     color: black;
-    text-align: left;
-    display: block;
+    margin-bottom: 20px;
 }
 
-.container input {
-    width: 100%;
-    padding: 15px;
+input[type="email"], input[type="password"] {
+    padding: 10px;
     margin-bottom: 15px;
-    border: 2px solid grey;
-    transition: all 0.5s ease;
-    outline: none;
+    border: 1px solid grey;
+    border-radius: 5px;
 }
 
-.container input:focus {
-    border-color: blue;
-    box-shadow: 0 0 5px rgb(3, 3, 145);
-}
-
-
-.container button {
-    width: 100%;
-    padding: 12px;
+button {
+    padding: 10px;
     border: none;
+    border-radius: 5px;
+    background-color: rgb(21, 180, 233);
     color: white;
-    font-size: 20px;
+    font-size: 16px;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: background-color 0.2s ease;
 }
 
-/*  */
+button:hover {
+    background-color: #4a90e2;
+}
 
-.container a {
-    color: blue;
+a {
+    color: #4a90e2;
     text-decoration: none;
-    font-weight: bold;
+    text-align: center;
+    display: block;
+    margin-top: 10px;
 }
 
-.container a:hover {
+a:hover {
     text-decoration: underline;
 }
